--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ metadata-wrangling/theses_to_2009-16457-merged.mrk
 metadata-wrangling/theses_to_2009-noDepartment.mrk
 metadata-wrangling/theses_to_2009-nocomma.mrk
 metadata-wrangling/theses_to_2009-nocommaspace.mrk
+metadata-wrangling/theses_to_2009-16457 - Copy.mrk
+metadata-wrangling/theses_to_2009-nodate.mrk
