--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ metadata-wrangling/theses_to_2009-nocomma.mrk
 metadata-wrangling/theses_to_2009-nocommaspace.mrk
 metadata-wrangling/theses_to_2009-16457 - Copy.mrk
 metadata-wrangling/theses_to_2009-nodate.mrk
+newDCQ.xsl
+metadata-wrangling/theses_to_2009-16457-export.txt
