--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ metadata-wrangling/theses_to_2009-16457 - Copy.mrk
 metadata-wrangling/theses_to_2009-nodate.mrk
 newDCQ.xsl
 metadata-wrangling/theses_to_2009-16457-export.txt
+metadata-wrangling/theses_to_2009-split/
