--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ metadata-wrangling/proquest_theses-postlaunch/group_3_uniques.mrk
 metadata-wrangling/proquest_theses-postlaunch/group_3_unicorn_ids-not_found
 metadata-wrangling/proquest_theses-postlaunch/group_3-dupes.mrk
 metadata-wrangling/proquest_theses-postlaunch/group_3-dupes-title.mrk
+.DS_Store
