removed terms folder

--- a/.gitignore
+++ b/.gitignore
@@ -34,4 +34,4 @@ metadata-wrangling/test
 metadata-wrangling/internet_archive_coll/albertagovernmentpublications/enhanced_marc_serials_monographs 
 metadata-wrangling/internet_archive_coll/university_of_alberta_libraries_microfilm/.~lock.test.tsv#
 metadata-wrangling/internet_archive_coll/university_of_alberta_libraries_microfilm/CIHM_MARC.tsv
-
+data_dictionary/__pycache__
