--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ metadata-wrangling/internet_archive_coll/albertagovernmentpublications/enhanced_
 metadata-wrangling/internet_archive_coll/university_of_alberta_libraries_microfilm/.~lock.test.tsv#
 metadata-wrangling/internet_archive_coll/university_of_alberta_libraries_microfilm/CIHM_MARC.tsv
 data_dictionary/__pycache__
+metadata-wrangling/BIBFRAME/UADATA-BIBFRAME-All-files/
