git ignore modified

--- a/.gitignore
+++ b/.gitignore
@@ -34,4 +34,9 @@ metadata-wrangling/test
 metadata-wrangling/internet_archive_coll/albertagovernmentpublications/enhanced_marc_serials_monographs 
 metadata-wrangling/internet_archive_coll/university_of_alberta_libraries_microfilm/.~lock.test.tsv#
 metadata-wrangling/internet_archive_coll/university_of_alberta_libraries_microfilm/CIHM_MARC.tsv
-data_dictionary/__pycache__
+data_dictionary/__pycache__/*
+data_dictionary/scripts/secret.py
+data_dictionary/www/flask.sublime-project
+data_dictionary/www/flask.sublime-workspace
+/home/zschoenb/Documents/Projects/metadata/data_dictionary/www/sftp-config.json
+data_dictionary/t2.py
