--- a/data_dictionary/www/sftp-config.json
+++ b/data_dictionary/www/sftp-config.json
@@ -6,7 +6,7 @@
     "type": "sftp",
 
     "save_before_upload": true,
-    "upload_on_save": false,
+    "upload_on_save": true,
     "sync_down_on_open": false,
     "sync_skip_deletes": false,
     "sync_same_age": true,
@@ -21,7 +21,7 @@
     
     "remote_path": "/var/www/Flask/",
     "ignore_regexes": [
-        "\\.sublime-(project|workspace)", "sftp-config(-alt\\d?)?\\.json",
+        "\\.sublime-(project|workspace)", "flaskapp.wsgi", "sftp-config(-alt\\d?)?\\.json",
         "sftp-settings\\.json", "/venv/", "\\.svn/", "\\.hg/", "\\.git/",
         "\\.bzr", "_darcs", "CVS", "\\.DS_Store", "Thumbs\\.db", "desktop\\.ini"
     ],
