deleted extraneous files

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 ERA_DCQ_migration-selection-test.xsl
+newDCQ.xsl
+.DS_Store
 metadata-wrangling/theses_to_2009-16457-before_merge.mrk
 metadata-wrangling/theses_to_2009-16457-merged.mrk
 metadata-wrangling/theses_to_2009-noDepartment.mrk
@@ -6,7 +8,6 @@ metadata-wrangling/theses_to_2009-nocomma.mrk
 metadata-wrangling/theses_to_2009-nocommaspace.mrk
 metadata-wrangling/theses_to_2009-16457 - Copy.mrk
 metadata-wrangling/theses_to_2009-nodate.mrk
-newDCQ.xsl
 metadata-wrangling/theses_to_2009-16457-export.txt
 metadata-wrangling/theses_to_2009-final-dedup-4-part.xml
 metadata-wrangling/theses_to_2009-final-dedup-2-part.xml
@@ -30,18 +31,14 @@ metadata-wrangling/internet_archive_coll/reports/count.tsv
 metadata-wrangling/internet_archive_coll/reports/.~lock.albertagovpub_marc_fields_count.tsv#
 metadata-wrangling/internet_archive_coll/reports/.~lock.count.tsv#
 metadata-wrangling/test
-.DS_Store
 metadata-wrangling/internet_archive_coll/albertagovernmentpublications/enhanced_marc_serials_monographs 
 metadata-wrangling/internet_archive_coll/university_of_alberta_libraries_microfilm/.~lock.test.tsv#
 metadata-wrangling/internet_archive_coll/university_of_alberta_libraries_microfilm/CIHM_MARC.tsv
-<<<<<<< HEAD
-data_dictionary/__pycache__/*
-data_dictionary/scripts/secret.py
-data_dictionary/www/flask.sublime-project
-data_dictionary/www/flask.sublime-workspace
-/home/zschoenb/Documents/Projects/metadata/data_dictionary/www/sftp-config.json
-data_dictionary/t2.py
-=======
-data_dictionary/__pycache__
 metadata-wrangling/BIBFRAME/UADATA-BIBFRAME-All-files/
->>>>>>> f069dd969370d7f6e376c40af22adb900a743ca5
+scripts/*.sublime-project
+scripts/*.sublime-workspace
+data_dictionary/__pycache__
+data_dictionary/scripts/secret.py
+data_dictionary/scripts/*.sublime-project
+data_dictionary/scripts/*.sublime-workspace
+data_dictionary/www/sftp-config.json
