--- a/scripts/jupiter_migration/sftp-config.json
+++ b/scripts/jupiter_migration/sftp-config.json
@@ -19,7 +19,7 @@
     //"password": "password",
     //"port": "22",
     
-    "remote_path": "/home/ubuntu/metadata/",
+    "remote_path": "/home/ubuntu/metadata/scripts/jupiter_migration/",
     "ignore_regexes": [
         "\\.sublime-(project|workspace)", "sftp-config(-alt\\d?)?\\.json",
         "sftp-settings\\.json", "/venv/", "\\.svn/", "\\.hg/", "\\.git/",
