ignoring results folder

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@ data_dictionary/scripts/secret.py
 data_dictionary/scripts/*.sublime-project
 data_dictionary/scripts/*.sublime-workspace
 data_dictionary/www/sftp-config.json
+scripts/jupiter_migration/results/*
