--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,7 @@ data_dictionary/scripts/*.sublime-workspace
 data_dictionary/scripts/lib/__pycache__/*
 data_dictionary/www/sftp-config.json
 scripts/jupiter_migration/results/*
+
+scripts/jupiter_migration/__pycache__/config\.cpython-35\.pyc
+
+scripts/jupiter_migration/__pycache__/utilities\.cpython-35\.pyc
