--- a/.gitignore
+++ b/.gitignore
@@ -42,9 +42,14 @@ data_dictionary/scripts/secret.py
 data_dictionary/scripts/*.sublime-project
 data_dictionary/scripts/*.sublime-workspace
 data_dictionary/scripts/lib/__pycache__/*
+data_dictionary/scripts/lib/message.md
 data_dictionary/www/sftp-config.json
 scripts/jupiter_migration/results/*
 
 scripts/jupiter_migration/__pycache__/config\.cpython-35\.pyc
 
 scripts/jupiter_migration/__pycache__/utilities\.cpython-35\.pyc
+
+data_dictionary/scripts/lib/__pycache__/
+
+message\.md
