--- a/.gitignore
+++ b/.gitignore
@@ -51,5 +51,5 @@ scripts/jupiter_migration/__pycache__/config\.cpython-35\.pyc
 scripts/jupiter_migration/__pycache__/utilities\.cpython-35\.pyc
 
 data_dictionary/scripts/lib/__pycache__/
-
+data_dictionary/scripts/lib/secret.py
 message\.md
