--- a/.gitignore
+++ b/.gitignore
@@ -45,11 +45,10 @@ data_dictionary/scripts/lib/__pycache__/*
 data_dictionary/scripts/lib/message.md
 data_dictionary/www/sftp-config.json
 scripts/jupiter_migration/results/*
-
 scripts/jupiter_migration/__pycache__/config\.cpython-35\.pyc
-
 scripts/jupiter_migration/__pycache__/utilities\.cpython-35\.pyc
 data_dictionary/scripts/lib/secret.py
 data_dictionary/scripts/lib/__pycache__/
 data_dictionary/scripts/lib/secret.py
 message\.md
+*.pyc
