--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,4 @@ data_dictionary/scripts/lib/__pycache__/
 data_dictionary/scripts/lib/secret.py
 message\.md
 *.pyc
+scripts/jupiter_migration/cache/
