added OAI mappings to excel and Google Sheets

--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,8 @@ data_dictionary/scripts/*.sublime-workspace
 data_dictionary/scripts/lib/__pycache__/*
 data_dictionary/scripts/lib/message.md
 data_dictionary/www/sftp-config.json
+data_dictionary/scripts/lib/excel.pyc
+data_dictionary/scripts/lib/config.pyc
 scripts/jupiter_migration/results/*
 scripts/jupiter_migration/__pycache__/config\.cpython-35\.pyc
 scripts/jupiter_migration/__pycache__/utilities\.cpython-35\.pyc
@@ -53,3 +55,4 @@ data_dictionary/scripts/lib/secret.py
 message\.md
 *.pyc
 scripts/jupiter_migration/cache/
+
