added performance profiler to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,5 @@ scripts/jupiter_migration/profile
 scripts/jupiter_migration/tools\.py
 
 scripts/jupiter_migration/config\.py
+
+scripts/jupiter_migration/profile\.txt
