--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@ metadata-wrangling/internet_archive_coll/albertagovernmentpublications/enhanced_
 metadata-wrangling/internet_archive_coll/university_of_alberta_libraries_microfilm/.~lock.test.tsv#
 metadata-wrangling/internet_archive_coll/university_of_alberta_libraries_microfilm/CIHM_MARC.tsv
 metadata-wrangling/BIBFRAME/UADATA-BIBFRAME-All-files/
+metadata-wrangling/BIBFRAME/MARC-URIs/marc/*
 scripts/*.sublime-project
 scripts/*.sublime-workspace
 data_dictionary/__pycache__
