--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,8 @@ data_dictionary/www/sftp-config.json
 data_dictionary/scripts/lib/excel.pyc
 data_dictionary/scripts/lib/config.pyc
 scripts/jupiter_migration/results/*
+scripts/migration/results/*
+scripts/migration/cache/*
 scripts/jupiter_migration/__pycache__/config\.cpython-35\.pyc
 scripts/jupiter_migration/__pycache__/utilities\.cpython-35\.pyc
 data_dictionary/scripts/lib/secret.py
