changes to migration

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,7 @@ metadata-wrangling/internet_archive_coll/university_of_alberta_libraries_microfi
 metadata-wrangling/BIBFRAME/UADATA-BIBFRAME-All-files/
 metadata-wrangling/BIBFRAME/MARC-URIs/marc/*
 scripts/*.sublime-project
+scripts/migration/results-feb-23-generic/*
 scripts/*.sublime-workspace
 data_dictionary/__pycache__
 data_dictionary/scripts/secret.py
