--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,7 @@ data_dictionary/scripts/lib/config.pyc
 scripts/jupiter_migration/results/*
 scripts/migration/results/*
 scripts/migration/cache/*
+scripts/migration/graphdb_import.sh
 scripts/jupiter_migration/__pycache__/config\.cpython-35\.pyc
 scripts/jupiter_migration/__pycache__/utilities\.cpython-35\.pyc
 data_dictionary/scripts/lib/secret.py
