printing accessRights in audit

--- a/.gitignore
+++ b/.gitignore
@@ -51,7 +51,7 @@ data_dictionary/scripts/lib/config.pyc
 scripts/jupiter_migration/results/*
 scripts/migration/results/*
 scripts/migration/cache/*
-script/migration/Audit/*
+scripts/migration/Audit/*
 scripts/migration/graphdb_import.sh
 scripts/jupiter_migration/__pycache__/config\.cpython-35\.pyc
 scripts/jupiter_migration/__pycache__/utilities\.cpython-35\.pyc
