adding Archaeology collection's processing scripts

--- a/.gitignore
+++ b/.gitignore
@@ -91,24 +91,20 @@ scripts/avalon_migration/data/MediaObject*
 scripts/avalon_migration/migration_packages/*
 
 
-<<<<<<< HEAD
 scripts/ia/legacy_Thesis/files/pdf/* 
 
 scripts/ia/legacy_Thesis/files/txt/*
 
 scripts/ia/legacy_Thesis/files/mrc/*
 
-=======
-scripts/ia/legacy_Thesis/files/pdf/*
-
-scripts/ia/legacy_Thesis/files/mrc/*
-
-scripts/ia/legacy_Thesis/files/txt/*
-
->>>>>>> IA-legacy-theses
 .git-rewrite
 
 metadata-wrangling/BIBFRAME/Converter/results/*
-
 metadata-wrangling/BIBFRAME/Converter/Archive/*
+
+scripts/Archaeology/Sample/*
+scripts/Archaeology/triples/*
+scripts/Archaeology/output.txt
+scripts/Archaeology/batchArchaelogy*
+
 
