changes for deployment

--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,12 @@ scripts/Archaeology/output.txt
 scripts/Archaeology/batchArchaelogy*
 
 
+metadata-wrangling/BIBFRAME/Converter/APP-WIP/Django-based/BIBFRAME_Converter/Webapp/source/BIBFRAME/*
+metadata-wrangling/BIBFRAME/Converter/APP-WIP/Django-based/BIBFRAME_Converter/Webapp/source/MARC/*
+metadata-wrangling/BIBFRAME/Converter/APP-WIP/Django-based/BIBFRAME_Converter/Webapp/Files/MARC_XML/*
+metadata-wrangling/BIBFRAME/Converter/APP-WIP/Django-based/BIBFRAME_Converter/Webapp/Files/converted_BIBFRAME/*
+metadata-wrangling/BIBFRAME/Converter/APP-WIP/Django-based/BIBFRAME_Converter/Webapp/Files/Processing/*
+metadata-wrangling/BIBFRAME/Converter/APP-WIP/Django-based/BIBFRAME_Converter/Webapp/Files/results/*
+
+
+
