--- a/.gitignore
+++ b/.gitignore
@@ -97,6 +97,8 @@ scripts/ia/legacy_Thesis/Abstracts/*
 
 scripts/ia/legacy_Thesis/triples/*
 
+scripts/ia/Calgary_stampede_postcards/img/*
+
 .git-rewrite
 
 metadata-wrangling/BIBFRAME/Converter/results/*
