--- a/.gitignore
+++ b/.gitignore
@@ -99,6 +99,10 @@ scripts/ia/legacy_Thesis/triples/*
 
 scripts/ia/Calgary_stampede_postcards/img/*
 
+scripts/ia/Prairie_Promises_Postcard_Collection/img/*
+
+scripts/ia/Prairie_Promises_Postcard_Collection/uploaded/*
+
 .git-rewrite
 
 metadata-wrangling/BIBFRAME/Converter/results/*
