pulling more legacy theses from IA

--- a/.gitignore
+++ b/.gitignore
@@ -113,6 +113,8 @@ scripts/Archaeology/triples/*
 scripts/Archaeology/output.txt
 scripts/Archaeology/batchArchaelogy*
 
+scripts/Technical_triples/fixity/*
+scripts/Technical_triples/metadata/*
 
 metadata-wrangling/BIBFRAME/Converter/APP-WIP/Django-based/BIBFRAME_Converter/Webapp/source/BIBFRAME/*
 metadata-wrangling/BIBFRAME/Converter/APP-WIP/Django-based/BIBFRAME_Converter/Webapp/source/MARC/*
